--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,44 @@
   src: url("../fonts/BootsAndSpurs.ttf");
 }
 
+/* NOTE: This applies styling to the root element which is the parent of HTML */
+:root {
+  font-family: Roboto, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 100%;
+
+  font-synthesis: none;
+  /* NOTE: Improves how fonts are displayed */
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+*,
+*:before,
+*:after {
+  /* NOTE: Inherit box sizing from the HTML parent */
+  box-sizing: inherit;
+}
+
 html {
   box-sizing: border-box;
   font-family: Roboto, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+body {
+  min-width: 320px;
 }
 
 html,
 body {
   min-height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
+/* NOTE: Remove the default styling applied by the browser */
 h1,
 h2,
 h3,
@@ -31,13 +52,18 @@ h6 {
   font-family: "boots and spurs", serif;
 }
 
-h2 {
-  font-size: 1.2rem;
+p {
+  margin-top: 0;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+h1 {
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+  font-size: 1.2rem;
 }
 
 img {
@@ -45,14 +71,11 @@ img {
 }
 
 header {
+  width: 100%;
   background-color: #202020;
   display: flex;
   color: #fff;
-  padding: 1rem;
-}
-
-.title {
-  font-size: 1.4rem;
+  padding: 1rem 2rem;
 }
 
 nav {
@@ -71,21 +94,13 @@ nav ul {
 nav a {
   color: #fff;
   text-decoration: none;
+  /* NOTE: Minimum touch area */
   min-height: 45px;
   display: inline-flex;
   align-items: center;
 }
 
-.hero-section {
-  width: 100%;
-  min-height: 80vh;
-  background-image: url("../images/home-header.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 6rem 5rem;
-}
-
+/* NOTE: Style all buttons across all pages using class="button" */
 .button {
   width: 100%;
   max-width: 300px;
@@ -104,16 +119,34 @@ nav a {
   transform: scale(1.1);
 }
 
+.section {
+  width: 100%;
+  padding: 5rem 2rem;
+}
+
+.section--container {
+  width: 100%;
+  max-width: 800px;
+  /* NOTE: Center content because we use a max-width */
+  margin: auto;
+}
+
+.hero-section {
+  width: 100%;
+  min-height: 80vh;
+  background-image: url("../images/home-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 6rem 5rem;
+}
+
 .hero-section .button {
   margin-top: 2rem;
 }
 
 .button-primary {
   background-color: rgb(187 0 0);
-}
-
-.section {
-  padding: 5rem 0;
 }
 
 .features-section {
@@ -139,36 +172,39 @@ nav a {
   border-radius: 24%;
 }
 
-.review-list {
+.reviews-section {
+  /* NOTE: The one is for transparency/opacity */
+  background-color: rgba(232, 232, 232, 1);
+}
+
+.review-section_inner {
   display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 
-.reviews-section {
-  /* NOTE: The one is for transparency/opacity */
-  background-color: rgba(232, 232, 232, 1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.review-list {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: center;
   gap: 1rem;
 }
 
 .review-card {
+  /* NOTE: We need to accomidate for the gap on the parent */
+  width: 49%;
   display: flex;
   flex-direction: column;
-  width: 50%;
-  max-width: 300px;
   flex: 1 1 auto;
 }
 
 .review-card figure {
+  /* NOTE: Remove default styling */
   margin: 0;
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
